
   * Limit the default in-memory processing (maxMainMemoryBytes) in
     the PDFParser to 512MB as in the 1.x branch (TIKA-3642).

   * Added IDML Parser from 1.x series to 2.x series (TIKA-3188).

   * Extract annotation types and subtypes for PDFs into metadata (TIKA-3653).

   * Add metadata value for PDFs that contain 3D annotations (TIKA-3653).


Release 2.2.1 - 12/19/2021

   * Fix multithreading bug for ooxml files (TIKA-3627).

   * Upgrade log4j to 2.17.0 (TIKA-3625).

   * Upgrade to PDFBox 2.0.25 (TIKA-3622)

   * Fix bug that prevented metadata keys in the UnpackerResource
     in tika-server (TIKA-3624).

   * Upgrade log4j to 2.16.0 (TIKA-3623)

Release 2.2.0 - 12/13/2021

   * Add support for OneNote files downloaded from O365 (TIKA-3446).

   * Fix logic bug in PipesServer that prevented concatenation of
     content from attachments (TIKA-3609).

   * Improve extraction of embedded files from MSOffice files created
     by non-Microsoft tools (TIKA-3526).

   * Added back ability to ignore load errors in TikaConfig (TIKA-3575).

   * Make SecureContentHandler and other parameters configurable in
     AutoDetectParser programmatically and via tika-config.xml (TIKA-3594).

   * Fix default logging in tika-app in batch mode (TIKA-3589).

   * Fix bug that prevented specifying a config with the long
     --config= option in tika-app in batch mode (TIKA-3589).

   * Fix thread starvation after numerous restarts in
     PipesClient (TIKA-3588).

   * Fix race condition when starting multiple forked
     servers on multiple ports (TIKA-3586).

   * Add timeout per task to be configured via headers
     for tika-server's legacy endpoints /tika and /rmeta.
     Note that this timeout greater than taskTimeoutMillis (TIKA-3582).

   * Add metadata item for whether or not a PDF has a collection/
     is a Portfolio PDF (TIKA-3579).

   * Add detection of ESRI Layer files (TIKA-3570).

   * Add detection of JPEG XL, MARC, ICC profiles, NES-ROM file types