@@ -13,6 +13,7 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
+org.apache.tika.parser.tmx.TMXParser
 org.apache.tika.parser.xliff.XLIFF12Parser
 org.apache.tika.parser.xliff.XLZParser
 org.apache.tika.parser.xml.DcXMLParser
